# testing-ss-sdc

./: .conform.yml  .env.example  .secrets.baseline  LICENSE  README.md  app.py  config.py  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: conformace.yml
