[tool.poetry]
name = "testing-ss-sdc"
version = "0.1.0"
description = "testing dependabot with poetry"
authors = ["Eliecer Daza <eliecer.daza@globant.com>"]

[tool.poetry.dependencies]
python = "3.6.11"
botocore = "1.21.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
